--- a/flink-streaming-connectors/pom.xml
+++ b/flink-streaming-connectors/pom.xml
@@ -44,7 +44,8 @@ under the License.
 		<module>flink-connector-rabbitmq</module>
 		<module>flink-connector-twitter</module>
 		<module>flink-connector-nifi</module>
-	</modules>
+        <module>flink-connector-akka</module>
+    </modules>
 
 	<!-- See main pom.xml for explanation of profiles -->
 	<profiles>
