--- a/flink-streaming-connectors/pom.xml
+++ b/flink-streaming-connectors/pom.xml
@@ -45,7 +45,8 @@ under the License.
 		<module>flink-connector-twitter</module>
 		<module>flink-connector-nifi</module>
 		<module>flink-connector-cassandra</module>
-	</modules>
+    <module>flink-connector-akka</module>
+  </modules>
 
 	<!-- See main pom.xml for explanation of profiles -->
 	<profiles>
