--- a/flink-streaming-connectors/flink-connector-akka/pom.xml
+++ b/flink-streaming-connectors/flink-connector-akka/pom.xml
@@ -44,6 +44,12 @@ under the License.
 
         <dependency>
             <groupId>org.apache.flink</groupId>
+            <artifactId>flink-streaming-scala_2.10</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.flink</groupId>
             <artifactId>flink-scala_2.10</artifactId>
             <version>${project.version}</version>
         </dependency>
