--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@ under the License.
 
 	<groupId>org.apache.flink</groupId>
 	<artifactId>flink-parent</artifactId>
-	<version>1.0-SNAPSHOT</version>
+	<version>1.0.0-rbp</version>
 
 	<name>flink</name>
 	<packaging>pom</packaging>
@@ -47,7 +47,20 @@ under the License.
 		<url>https://github.com/apache/flink</url>
 		<connection>git@github.com:apache/flink.git</connection>
 		<developerConnection>scm:git:https://git-wip-us.apache.org/repos/asf/flink.git</developerConnection>
-	</scm>
+ </scm>
+
+ <distributionManagement>
+   <repository>
+     <id>io.radicalbit.public-repo-releases</id>
+     <name>Radicalbit Releases Repository</name>
+     <url>https://public-repo.radicalbit.io/maven/repository/internal/</url>
+   </repository>
+   <snapshotRepository>
+     <id>io.radicalbit.public-repo-snapshots</id>
+     <name>Radicalbit Snapshots Repository</name>
+     <url>https://public-repo.radicalbit.io/maven/repository/snapshots/</url>
+   </snapshotRepository>
+ </distributionManagement>
 
 	<modules>
 		<!--- Dummy module to force execution of the Maven Shade plugin (see Shade plugin below) -->
