--- a/tools/force-shading/pom.xml
+++ b/tools/force-shading/pom.xml
@@ -42,6 +42,19 @@ under the License.
 
 	<packaging>jar</packaging>
 
+	<distributionManagement>
+		<repository>
+			<id>io.radicalbit.public-repo-releases</id>
+			<name>Radicalbit Releases Repository</name>
+			<url>https://public-repo.radicalbit.io/maven/repository/internal/</url>
+		</repository>
+		<snapshotRepository>
+			<id>io.radicalbit.public-repo-snapshots</id>
+			<name>Radicalbit Snapshots Repository</name>
+			<url>https://public-repo.radicalbit.io/maven/repository/snapshots/</url>
+		</snapshotRepository>
+	</distributionManagement>
+
 	<profiles>
 		<profile>
 			<id>release</id>
