--- a/flink-contrib/flink-operator-stats/pom.xml
+++ b/flink-contrib/flink-operator-stats/pom.xml
@@ -24,7 +24,7 @@ under the License.
     <parent>
         <groupId>org.apache.flink</groupId>
         <artifactId>flink-contrib</artifactId>
-        <version>1.0.1-rbp-002-SNAPSHOT</version>
+        <version>1.0.1-rbp-002</version>
         <relativePath>..</relativePath>
     </parent>
 
