--- a/flink-libraries/flink-python/pom.xml
+++ b/flink-libraries/flink-python/pom.xml
@@ -23,7 +23,7 @@ under the License.
     <parent>
         <groupId>org.apache.flink</groupId>
         <artifactId>flink-libraries</artifactId>
-        <version>1.0.1-rbp-002-SNAPSHOT</version>
+        <version>1.0.1-rbp-002</version>
         <relativePath>..</relativePath>
     </parent>
 
