--- a/flink-batch-connectors/flink-jdbc/pom.xml
+++ b/flink-batch-connectors/flink-jdbc/pom.xml
@@ -26,7 +26,7 @@ under the License.
 	<parent>
 		<groupId>org.apache.flink</groupId>
 		<artifactId>flink-batch-connectors</artifactId>
-		<version>1.0.1-rbp-002</version>
+		<version>1.0.1-rbp-003-SNAPSHOT</version>
 		<relativePath>..</relativePath>
 	</parent>
 
