--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,19 @@ under the License.
 		<developerConnection>scm:git:https://git-wip-us.apache.org/repos/asf/flink.git</developerConnection>
 	</scm>
 
+	<distributionManagement>
+		<repository>
+		  <id>io.radicalbit.public-repo-releases</id>
+			<name>Radicalbit Releases Repository</name>
+			<url>https://public-repo.radicalbit.io/maven/repository/internal/</url>
+			</repository>
+		<snapshotRepository>
+		  <id>io.radicalbit.public-repo-snapshots</id>
+			<name>Radicalbit Snapshots Repository</name>
+			<url>https://public-repo.radicalbit.io/maven/repository/snapshots/</url>
+		</snapshotRepository>
+	</distributionManagement>
+
 	<modules>
 		<!--- Dummy module to force execution of the Maven Shade plugin (see Shade plugin below) -->
 		<module>tools/force-shading</module>
