--- a/flink-contrib/flink-storm-examples/pom.xml
+++ b/flink-contrib/flink-storm-examples/pom.xml
@@ -25,7 +25,7 @@ under the License.
 	<parent>
 		<groupId>org.apache.flink</groupId>
 		<artifactId>flink-contrib</artifactId>
-		<version>1.0-SNAPSHOT</version>
+		<version>1.0.3-rbp-001-SNAPSHOT</version>
 		<relativePath>..</relativePath>
 	</parent>
 
