--- a/flink-examples/flink-examples-batch/pom.xml
+++ b/flink-examples/flink-examples-batch/pom.xml
@@ -24,7 +24,7 @@ under the License.
 	<parent>
 		<groupId>org.apache.flink</groupId>
 		<artifactId>flink-examples_2.10</artifactId>
-		<version>1.0.3-rbp-001-SNAPSHOT</version>
+		<version>1.0.3-rbp-001</version>
 		<relativePath>..</relativePath>
 	</parent>
 
