--- a/flink-libraries/flink-gelly/pom.xml
+++ b/flink-libraries/flink-gelly/pom.xml
@@ -25,7 +25,7 @@ under the License.
 	<parent>
 		<groupId>org.apache.flink</groupId>
 		<artifactId>flink-libraries</artifactId>
-		<version>1.0.3-rbp-001-SNAPSHOT</version>
+		<version>1.0.3-rbp-001</version>
 		<relativePath>..</relativePath>
 	</parent>
 	
