--- a/flink-yarn/pom.xml
+++ b/flink-yarn/pom.xml
@@ -23,7 +23,7 @@ under the License.
 	<parent>
 		<groupId>org.apache.flink</groupId>
 		<artifactId>flink-parent</artifactId>
-		<version>1.0.3-rbp-001-SNAPSHOT</version>
+		<version>1.0.3-rbp-001</version>
 		<relativePath>..</relativePath>
 	</parent>
 	
