--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@ under the License.
 
 	<groupId>org.apache.flink</groupId>
 	<artifactId>flink-parent</artifactId>
-	<version>1.0.3-rbp-001</version>
+	<version>1.0.3-rbp-002-SNAPSHOT</version>
 
 	<name>flink</name>
 	<packaging>pom</packaging>
