--- a/flink-contrib/pom.xml
+++ b/flink-contrib/pom.xml
@@ -27,7 +27,7 @@ under the License.
 	<parent>
 		<groupId>org.apache.flink</groupId>
 		<artifactId>flink-parent</artifactId>
-		<version>1.0.3-rbp-002-SNAPSHOT</version>
+		<version>1.0.3-rbd-002-SNAPSHOT</version>
 		<relativePath>..</relativePath>
 	</parent>
 
