--- a/flink-streaming-connectors/flink-connector-elasticsearch/pom.xml
+++ b/flink-streaming-connectors/flink-connector-elasticsearch/pom.xml
@@ -26,7 +26,7 @@ under the License.
 	<parent>
 		<groupId>org.apache.flink</groupId>
 		<artifactId>flink-streaming-connectors</artifactId>
-		<version>1.0.3-rbp-002-SNAPSHOT</version>
+		<version>1.0.3-rbd-002-SNAPSHOT</version>
 		<relativePath>..</relativePath>
 	</parent>
 
