--- a/flink-shaded-curator/flink-shaded-curator-test/pom.xml
+++ b/flink-shaded-curator/flink-shaded-curator-test/pom.xml
@@ -24,7 +24,7 @@
 	<parent>
 		<groupId>org.apache.flink</groupId>
 		<artifactId>flink-shaded-curator</artifactId>
-		<version>1.0.3-rbd-002-SNAPSHOT</version>
+		<version>1.0.3-rbd-002</version>
 		<relativePath>..</relativePath>
 	</parent>
 
