--- a/tools/force-shading/pom.xml
+++ b/tools/force-shading/pom.xml
@@ -38,7 +38,7 @@ under the License.
 
 	<groupId>org.apache.flink</groupId>
 	<artifactId>force-shading</artifactId>
-	<version>1.0.3-rbd-002-SNAPSHOT</version>
+	<version>1.0.3-rbd-002</version>
 
 	<packaging>jar</packaging>
 
